--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -59,7 +59,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +345,7 @@
        "[244 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,10 +356,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>group</th>\n",
+       "      <th>infection_case</th>\n",
+       "      <th>confirmed</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1000001</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Guro-gu</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Guro-gu Call Center</td>\n",
+       "      <td>79</td>\n",
+       "      <td>37.508163</td>\n",
+       "      <td>126.884387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1000002</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Dongdaemun-gu</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Dongan Church</td>\n",
+       "      <td>24</td>\n",
+       "      <td>37.592888</td>\n",
+       "      <td>127.056766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000003</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Eunpyeong-gu</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Eunpyeong St. Mary's Hospital</td>\n",
+       "      <td>14</td>\n",
+       "      <td>37.63369</td>\n",
+       "      <td>126.9165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000004</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Seongdong-gu</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Seongdong-gu APT</td>\n",
+       "      <td>13</td>\n",
+       "      <td>37.55713</td>\n",
+       "      <td>127.0403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1000005</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jongno-gu</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Jongno Community Center</td>\n",
+       "      <td>10</td>\n",
+       "      <td>37.57681</td>\n",
+       "      <td>127006</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>6100004</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>Changwon-si</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Hanmaeum Changwon Hospital</td>\n",
+       "      <td>7</td>\n",
+       "      <td>35.22115</td>\n",
+       "      <td>128.6866</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>6100005</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>Changnyeong-gun</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Changnyeong Coin Karaoke</td>\n",
+       "      <td>7</td>\n",
+       "      <td>35.54127</td>\n",
+       "      <td>128.5008</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>6100006</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>from other city</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Onchun Church</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>6100007</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>-</td>\n",
+       "      <td>False</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>19</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>7000001</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>-</td>\n",
+       "      <td>False</td>\n",
+       "      <td>etc</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>81 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    case_id          province             city  group  \\\n",
+       "0   1000001             Seoul          Guro-gu   True   \n",
+       "1   1000002             Seoul    Dongdaemun-gu   True   \n",
+       "2   1000003             Seoul     Eunpyeong-gu   True   \n",
+       "3   1000004             Seoul     Seongdong-gu   True   \n",
+       "4   1000005             Seoul        Jongno-gu   True   \n",
+       "..      ...               ...              ...    ...   \n",
+       "76  6100004  Gyeongsangnam-do      Changwon-si   True   \n",
+       "77  6100005  Gyeongsangnam-do  Changnyeong-gun   True   \n",
+       "78  6100006  Gyeongsangnam-do  from other city   True   \n",
+       "79  6100007  Gyeongsangnam-do                -  False   \n",
+       "80  7000001           Jeju-do                -  False   \n",
+       "\n",
+       "                   infection_case  confirmed   latitude   longitude  \n",
+       "0             Guro-gu Call Center         79  37.508163  126.884387  \n",
+       "1                   Dongan Church         24  37.592888  127.056766  \n",
+       "2   Eunpyeong St. Mary's Hospital         14   37.63369    126.9165  \n",
+       "3                Seongdong-gu APT         13   37.55713    127.0403  \n",
+       "4         Jongno Community Center         10   37.57681      127006  \n",
+       "..                            ...        ...        ...         ...  \n",
+       "76     Hanmaeum Changwon Hospital          7   35.22115    128.6866  \n",
+       "77       Changnyeong Coin Karaoke          7   35.54127    128.5008  \n",
+       "78                  Onchun Church          2          -           -  \n",
+       "79                            etc         19          -           -  \n",
+       "80                            etc          4          -           -  \n",
+       "\n",
+       "[81 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dataSet-Covid/Case.csv')"
+   ]
   },
   {
    "cell_type": "code",
