--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <center><h4 id=\"titulo\">***PANDEMIC COVID-19*** </center>    "
+    "### <center><h4 id=\"titulo\">*PANDEMIC COVID-19* </center>    "
    ]
   },
   {
