--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -20,14 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <CENTER><H3>**발리 발리**</H3></CENTER>"
+    " <CENTER><H3>**발리 발리**</H3></CENTER>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <center><h4 id=\"titulo\">*PANDEMIC COVID-19* </center>    "
+    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19</center>    "
    ]
   },
   {
