--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,15 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2 id=\"titulo><center>Save the population\n",
-    "        PANDEMIC COVID-19</center></h2>"
+    " <CENTER><H3>**발리 발리**</H3></CENTER>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19</center>    "
+    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19</center>   "
    ]
   },
   {
