--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <CENTER><H3>**발리 발리**</H3></CENTER>"
+    " <CENTER><H3>발리 발리</H3></CENTER>"
    ]
   },
   {
