--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,14 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " <CENTER><H3>발리 발리</H3></CENTER>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19</center>   "
+    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19 (발리 발리)</center>   "
    ]
   },
   {
@@ -32,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
