--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19 (발리 발리)</center>   "
+    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19 </center>   "
    ]
   },
   {
