--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,28 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +308,7 @@
        "[244 rows x 12 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +319,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +517,7 @@
        "[81 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,6 +532,540 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>global_num</th>\n",
+       "      <th>date</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1400000001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-01-19</td>\n",
+       "      <td>Incheon</td>\n",
+       "      <td>Jung-gu</td>\n",
+       "      <td>37.460459</td>\n",
+       "      <td>126.440680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1400000001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>Incheon</td>\n",
+       "      <td>Seo-gu</td>\n",
+       "      <td>37.478832</td>\n",
+       "      <td>126.668558</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1000000001</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-01-22</td>\n",
+       "      <td>Gyeonggi-do</td>\n",
+       "      <td>Gimpo-si</td>\n",
+       "      <td>37.562143</td>\n",
+       "      <td>126.801884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1000000001</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020-01-23</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Jung-gu</td>\n",
+       "      <td>37.567454</td>\n",
+       "      <td>127.005627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2000000001</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>Incheon</td>\n",
+       "      <td>Jung-gu</td>\n",
+       "      <td>37.460459</td>\n",
+       "      <td>126.440680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>1200000031</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2020-02-09</td>\n",
+       "      <td>Daegu</td>\n",
+       "      <td>Nam-gu</td>\n",
+       "      <td>35.839820</td>\n",
+       "      <td>128.566600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>1200000031</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2020-02-15</td>\n",
+       "      <td>Daegu</td>\n",
+       "      <td>Dong-gu</td>\n",
+       "      <td>35.882410</td>\n",
+       "      <td>128.662100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>1200000031</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2020-02-16</td>\n",
+       "      <td>Daegu</td>\n",
+       "      <td>Nam-gu</td>\n",
+       "      <td>35.839820</td>\n",
+       "      <td>128.566600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>1200000031</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2020-02-17</td>\n",
+       "      <td>Daegu</td>\n",
+       "      <td>Suseong-gu</td>\n",
+       "      <td>35.844730</td>\n",
+       "      <td>128.612300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>1200000031</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2020-02-18</td>\n",
+       "      <td>Daegu</td>\n",
+       "      <td>Seo-gu</td>\n",
+       "      <td>35.859590</td>\n",
+       "      <td>128.540600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>175 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     patient_id  global_num        date     province        city   latitude  \\\n",
+       "0    1400000001           1  2020-01-19      Incheon     Jung-gu  37.460459   \n",
+       "1    1400000001           1  2020-01-20      Incheon      Seo-gu  37.478832   \n",
+       "2    1000000001           2  2020-01-22  Gyeonggi-do    Gimpo-si  37.562143   \n",
+       "3    1000000001           2  2020-01-23        Seoul     Jung-gu  37.567454   \n",
+       "4    2000000001           3  2020-01-20      Incheon     Jung-gu  37.460459   \n",
+       "..          ...         ...         ...          ...         ...        ...   \n",
+       "170  1200000031          31  2020-02-09        Daegu      Nam-gu  35.839820   \n",
+       "171  1200000031          31  2020-02-15        Daegu     Dong-gu  35.882410   \n",
+       "172  1200000031          31  2020-02-16        Daegu      Nam-gu  35.839820   \n",
+       "173  1200000031          31  2020-02-17        Daegu  Suseong-gu  35.844730   \n",
+       "174  1200000031          31  2020-02-18        Daegu      Seo-gu  35.859590   \n",
+       "\n",
+       "      longitude  \n",
+       "0    126.440680  \n",
+       "1    126.668558  \n",
+       "2    126.801884  \n",
+       "3    127.005627  \n",
+       "4    126.440680  \n",
+       "..          ...  \n",
+       "170  128.566600  \n",
+       "171  128.662100  \n",
+       "172  128.566600  \n",
+       "173  128.612300  \n",
+       "174  128.540600  \n",
+       "\n",
+       "[175 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dataSet-Covid/PatientRoute.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>birth_year</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>province</th>\n",
+       "      <th>city</th>\n",
+       "      <th>fp_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Dobong-gu</td>\n",
+       "      <td>19140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Dobong-gu</td>\n",
+       "      <td>19950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Dongdaemun-gu</td>\n",
+       "      <td>25450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Dongdaemun-gu</td>\n",
+       "      <td>27050</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Dongjag-gu</td>\n",
+       "      <td>28880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431995</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>70</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Yangcheon-gu</td>\n",
+       "      <td>12080</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431996</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>70</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Yeongdeungpo-gu</td>\n",
+       "      <td>17750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431997</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>70</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Yeongdeungpo-gu</td>\n",
+       "      <td>13290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431998</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>70</td>\n",
+       "      <td>female</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Yongsan-gu</td>\n",
+       "      <td>12590</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>431999</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>23</td>\n",
+       "      <td>70</td>\n",
+       "      <td>male</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Yongsan-gu</td>\n",
+       "      <td>8560</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>432000 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              date  hour  birth_year     sex province             city  fp_num\n",
+       "0       2020-01-01     0          20  female    Seoul        Dobong-gu   19140\n",
+       "1       2020-01-01     0          20    male    Seoul        Dobong-gu   19950\n",
+       "2       2020-01-01     0          20  female    Seoul    Dongdaemun-gu   25450\n",
+       "3       2020-01-01     0          20    male    Seoul    Dongdaemun-gu   27050\n",
+       "4       2020-01-01     0          20  female    Seoul       Dongjag-gu   28880\n",
+       "...            ...   ...         ...     ...      ...              ...     ...\n",
+       "431995  2020-02-29    23          70    male    Seoul     Yangcheon-gu   12080\n",
+       "431996  2020-02-29    23          70  female    Seoul  Yeongdeungpo-gu   17750\n",
+       "431997  2020-02-29    23          70    male    Seoul  Yeongdeungpo-gu   13290\n",
+       "431998  2020-02-29    23          70  female    Seoul       Yongsan-gu   12590\n",
+       "431999  2020-02-29    23          70    male    Seoul       Yongsan-gu    8560\n",
+       "\n",
+       "[432000 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dataSet-Covid/SeoulFloating.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>age</th>\n",
+       "      <th>confirmed</th>\n",
+       "      <th>deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0s</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>10s</td>\n",
+       "      <td>169</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>20s</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30s</td>\n",
+       "      <td>506</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>633</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>166</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40s</td>\n",
+       "      <td>1193</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>167</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50s</td>\n",
+       "      <td>1656</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60s</td>\n",
+       "      <td>1099</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70s</td>\n",
+       "      <td>568</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80s</td>\n",
+       "      <td>329</td>\n",
+       "      <td>33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>171 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date  time  age  confirmed  deceased\n",
+       "0    2020-03-02     0   0s         32         0\n",
+       "1    2020-03-02     0  10s        169         0\n",
+       "2    2020-03-02     0  20s       1235         0\n",
+       "3    2020-03-02     0  30s        506         1\n",
+       "4    2020-03-02     0  40s        633         1\n",
+       "..          ...   ...  ...        ...       ...\n",
+       "166  2020-03-20     0  40s       1193         1\n",
+       "167  2020-03-20     0  50s       1656         7\n",
+       "168  2020-03-20     0  60s       1099        17\n",
+       "169  2020-03-20     0  70s        568        35\n",
+       "170  2020-03-20     0  80s        329        33\n",
+       "\n",
+       "[171 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dataSet-Covid/TimeAge.csv')"
+   ]
   },
   {
    "cell_type": "code",
