--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,8 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center><h4 id=\"titulo\">PANDEMIC COVID-19 </h4></center>\n",
-    "## <center><h4 id=\"titulo\">빨리 ... 빨리 </h4></center>"
+    "## <center>PANDEMIC COVID-19</center>"
    ]
   },
   {
