--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,16 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <center>PANDEMIC COVID-19</center>"
+    "# <p><center><strong>PANDEMIC COVID-19</strong></center></p>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The dataset to be used for the final course job is described in this section. <br>\n",
-    "## Data source : KCDC (Korea Centers for Disease Control and Prevention).<br> \n",
-    "## Note: DO NOT forget that behind the statistics there are people, they are NOT simple numbers that feed a database."
+    "## The dataset to be used for the final course job is described in this section. \n",
+    "## Data source : KCDC (Korea Centers for Disease Control and Prevention)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Note:DO NOT forget that behind the statistics there are people, they are NOT simple numbers that feed a database."
    ]
   },
   {
