--- a/COVID-19-South Korea/COVID-19.ipynb
+++ b/COVID-19-South Korea/COVID-19.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <p><center><strong>PANDEMIC COVID-19</strong></center></p>"
+    "# <center>PANDEMIC COVID-19 - South Korea</center>"
    ]
   },
   {
@@ -324,11 +324,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Data of COVID-19 infection cases in South Korea"
+   ]
   },
   {
    "cell_type": "code",
@@ -1072,6 +1072,199 @@
    "source": [
     "pd.read_csv('dataSet-Covid/TimeAge.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>time</th>\n",
+       "      <th>province</th>\n",
+       "      <th>confirmed</th>\n",
+       "      <th>released</th>\n",
+       "      <th>deceased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Busan</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Daegu</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Incheon</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-20</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Gwangju</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1032</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jeollabuk-do</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1033</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jeollanam-do</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1034</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Gyeongsangbuk-do</td>\n",
+       "      <td>841</td>\n",
+       "      <td>340</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1035</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>54</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1036</th>\n",
+       "      <td>2020-03-20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Jeju-do</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1037 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            date  time          province  confirmed  released  deceased\n",
+       "0     2020-01-20    16             Seoul          0         0         0\n",
+       "1     2020-01-20    16             Busan          0         0         0\n",
+       "2     2020-01-20    16             Daegu          0         0         0\n",
+       "3     2020-01-20    16           Incheon          1         0         0\n",
+       "4     2020-01-20    16           Gwangju          0         0         0\n",
+       "...          ...   ...               ...        ...       ...       ...\n",
+       "1032  2020-03-20     0      Jeollabuk-do          3         7         0\n",
+       "1033  2020-03-20     0      Jeollanam-do          2         3         0\n",
+       "1034  2020-03-20     0  Gyeongsangbuk-do        841       340        22\n",
+       "1035  2020-03-20     0  Gyeongsangnam-do         54        33         0\n",
+       "1036  2020-03-20     0           Jeju-do          2         2         0\n",
+       "\n",
+       "[1037 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_csv('dataSet-Covid/TimeProvince.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
